# brain

./: .gitignore  README.md  pyproject.toml  vaultforge_second_brain_plan.md
scripts/: install.sh  rebuild-index.sh  start.sh
secondbrain/: __init__.py  cli.py  database.py
secondbrain/compiler/: compile.py
secondbrain/health/: checks.py
secondbrain/indexes/: graph.py  search.py
secondbrain/ingest/: pipeline.py
secondbrain/llm/: client.py
secondbrain/query/: engine.py
secondbrain/ui/: app.py
secondbrain/ui/templates/: ask.html  base.html  concept_detail.html  concepts.html  entities.html  entity_detail.html  graph.html  health.html  index.html  ingest.html  log.html  note_detail.html  notes.html  search.html  settings.html  sources.html  vaults.html  viewer_md.html  viewer_pdf.html  viewer_text.html
secondbrain/ui/templates/partials/: annotations.html
secondbrain/vault/: frontmatter.py  manager.py  registry.py
tests/: test_cli.py  test_compiler.py  test_database.py  test_health.py  test_ingest.py  test_llm.py  test_query.py  test_vault.py
